# ChimeraMetals

./: .gitignore  BASELINE_FINAL_v2.0_DOCS.txt  BASELINE_WORKING_v1.0_DOCS.txt  CMakeLists.txt  DASHBOARD_EXPANSION.md  DEPLOY_BASELINE_INTEGRATED.ps1  DEPLOY_CHIMERAMETALS.ps1  DEPLOY_REAL_SYSTEM.ps1  DEPLOY_VPS_ONLY.ps1  PRODUCTION_v1.0_DUAL_SESSION_DOCS.txt  README.md  REBUILD_AND_START.ps1  START_CHIMERA.ps1  config.ini  new.txt  real.txt  tree.txt
BASELINE_20260223_035615/: CMakeLists.txt  config.ini
BASELINE_20260223_035615/exec_escalation/: CMakeLists.txt  EscalationConfig.hpp  EscalationSink.hpp  EscalationSinkStdout.hpp  EscalationTypes.hpp
BASELINE_20260223_035615/exec_policy/: CMakeLists.txt  ExecPolicyConfig.hpp  ExecPolicyGovernor.hpp  ExecPolicySink.hpp  ExecPolicySinkStdout.cpp  ExecPolicySinkStdout.hpp  ExecPolicyState.hpp  ExecPolicyTypes.hpp
BASELINE_20260223_035615/include/platform/: platform.hpp
BASELINE_20260223_035615/latency/: LatencyAttributionEngine.cpp  LatencyAttributionEngine.hpp  LatencyRecord.hpp  LatencySink.hpp  LatencyTypes.hpp  TelemetrySinkStdout.cpp  TelemetrySinkStdout.hpp
BASELINE_20260223_035615/profit_controls/: AsymmetricExitEngine.cpp  CMakeLists.txt  ExitExecDecision.hpp  LossShutdownConfig.hpp  LossShutdownEngine.cpp  LossShutdownEngine.hpp  ProfitControlSink.hpp  ProfitControlSinkStdout.hpp  SessionBiasConfig.hpp  SessionBiasEngine.cpp  SessionBiasState.hpp
BASELINE_20260223_035615/replay/: CMakeLists.txt  PostTradeAnalyzer.cpp  PostTradeAnalyzer.hpp  PostTradeReport.hpp  ReplayEngine.cpp  ReplayEngine.hpp  ReplayEvent.hpp  ReplayEventType.hpp  ReplayLog.cpp  ReplayLog.hpp
BASELINE_20260223_035615/risk/: CapitalAllocator.cpp  CapitalConfig.hpp  CapitalSink.hpp  CapitalSinkStdout.cpp  CapitalSinkStdout.hpp  CapitalState.hpp  LossPatternDetector.cpp  LossPatternDetector.hpp  RiskEvent.hpp
BASELINE_20260223_035615/sizing/: CMakeLists.txt  ConfidenceWeightedSizer.cpp  ConfidenceWeightedSizer.hpp  SizingDecision.hpp  SizingSink.hpp  SizingSinkStdout.cpp  SizingSinkStdout.hpp  SizingTypes.hpp
BASELINE_20260223_035615/src/: TelemetryWriter.hpp  main.cpp  main_OLD_BROKEN.cpp  main_original.cpp
BASELINE_20260223_035615/src/core/: Shutdown.hpp  TelemetryBus.hpp
BASELINE_20260223_035615/src/core/control/: CapitalAllocator.cpp  CapitalAllocator.hpp  LatencyFilter.cpp  LatencyTypes.hpp  SignalFusion.cpp  SignalFusion.hpp
BASELINE_20260223_035615/src/core/execution/: ExecPolicyEngine.hpp  ExecutionBridge.cpp  ExecutionBridgeFix.cpp  ExecutionBridgeFix.hpp
BASELINE_20260223_035615/src/core/fix/: FixAdapter.hpp
BASELINE_20260223_035615/src/core/telemetry/: FixTelemetry.hpp
BASELINE_20260223_035615/src/engines/: LiquidityVacuum.cpp  LiquidityVacuum.hpp  SessionBias.cpp  StopRunDetector.hpp
BASELINE_20260223_035615/src/gui/: CMakeLists.txt  TelemetryServer.hpp
BASELINE_20260223_035615/src/gui/www/: app.js  style.css
BASELINE_20260223_035615/src/platform/: platform_windows.cpp
BASELINE_20260223_035615/telemetry/: CMakeLists.txt  TelemetryBus.cpp  TelemetryEvent.hpp  TelemetryJson.cpp  TelemetryJson.hpp  TelemetrySink.hpp  TelemetrySinkStdout.cpp  TelemetryWsServer.hpp
ChimeraTelemetry/: ALL_BUILD.vcxproj  CMakeLists.txt  ChimeraMetal.sln  ChimeraMetal.vcxproj  ChimeraMetal.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
ChimeraTelemetry/ChimeraMetal.dir/Release/: ChimeraMetal.exe.recipe
ChimeraTelemetry/ChimeraMetal.dir/Release/ChimeraMetal.tlog/: CL.read.1.tlog  CL.write.1.tlog  ChimeraMetal.lastbuildstate  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ChimeraTelemetry/build_fresh/: ALL_BUILD.vcxproj  CMakeCache.txt  ChimeraTelemetry.sln  ChimeraTelemetry.vcxproj  ChimeraTelemetry.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
ChimeraTelemetry/build_fresh/ChimeraTelemetry.dir/Release/: ChimeraTelemetry.exe.recipe
ChimeraTelemetry/build_fresh/ChimeraTelemetry.dir/Release/ChimeraTelemetry.tlog/: Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ChimeraTelemetry/build_fresh/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
ChimeraTelemetry/dashboard/: index.html
ChimeraTelemetry/src/: SnapshotReader.cpp  UI_Upgrade.tmp  main.cpp  main_corrected.cpp
ChimeraTelemetry/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
ChimeraTelemetry/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
chimera/: run_gui.sh  (+10 more)
chimera/latency/: CMakeLists.txt
chimera/risk/: CMakeLists.txt  CapitalAllocator.hpp  CapitalTypes.hpp
chimera_extensions/: CMakeLists.txt  CMakeLists_V2.txt  README.md
chimera_extensions/allocation/: EnhancedCapitalAllocator.hpp
chimera_extensions/core/: AdaptiveOptimizer.cpp  AdaptiveOptimizer.hpp  AllocatorAuditor.cpp  AllocatorAuditor.hpp  BayesianSizer.cpp  BayesianSizer.hpp  HedgeController.cpp  HedgeController.hpp  OrderIntentTypes.hpp  PerformanceTracker.cpp  PerformanceTracker.hpp  ReinforcementEngine.cpp  ReinforcementEngine.hpp  SystemFrame.hpp  ThreadSafeQueue.hpp  ThreadSupervisor.cpp  ThreadSupervisor.hpp  UnifiedEngineCoordinator.hpp
chimera_extensions/engines/: IEngine.hpp  MetalStructureEngine.hpp  MicrostructureAnalyzer.cpp  MicrostructureAnalyzer.hpp  RegimeClassifier.cpp  RegimeClassifier.hpp  TimeframeAggregator.cpp  TimeframeAggregator.hpp
chimera_extensions/execution/: ExecutionJournal.cpp  ExecutionJournal.hpp  LatencyEngine.cpp  LatencyEngine.hpp
chimera_extensions/infra/: SPSCRingBuffer.hpp
chimera_extensions/integration/: ChimeraSystem.hpp
chimera_extensions/risk/: CapitalAnomalyGuard.cpp  CapitalAnomalyGuard.hpp  LossClusterMonitor.cpp  LossClusterMonitor.hpp  RiskGovernor.hpp  StatisticalMonitor.cpp  StatisticalMonitor.hpp
chimera_extensions/spine/: ExecutionSpine.hpp
chimera_extensions/telemetry/: DeskSnapshot.hpp  SnapshotPublisher.hpp  TelemetryCollector.hpp  TelemetryWsServer.cpp  TelemetryWsServer.hpp
(+82 files in other folders)
